--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
 }
 
 .escola{
-    background-image: linear-gradient(rgb(124, 73, 73),rgb(248, 150, 22));
+    background-image: linear-gradient(#424E61,hsl(32, 94%, 53%));
     color:white;
     display: flex;
     justify-content: center;
@@ -76,11 +76,11 @@ body {
 .estudante-todos{
     display: grid;
     grid-template-columns: 20% 20% 20% 20% 20%;
-    background-color: rgba(160, 195, 201, 0.411);
+    background-color: rgba(156, 174, 177, 0.411);
 }
 
 .rodape{
-    background-color: rgba(64, 83, 124, 0.575);
+    background-color: rgba(0, 81, 255, 0.575);
     text-align: center;
 }
 
